fixed horizontal scroll

--- a/styles/sass/partials/_main.scss
+++ b/styles/sass/partials/_main.scss
@@ -2,6 +2,7 @@
 
 html{
     scroll-behavior: smooth;
+    overflow-x: hidden;
 }
 
 .wrapper {
@@ -12,7 +13,7 @@ html{
 
 body{
     font-size: 125%;
-    background-color: #CBCBC8;
+    // background-color: #CBCBC8;
 }
 
 h1{
