--- a/styles/styles.css
+++ b/styles/styles.css
@@ -314,6 +314,7 @@ li a:hover {
 
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 .wrapper {
@@ -324,7 +325,6 @@ html {
 
 body {
   font-size: 125%;
-  background-color: #CBCBC8;
 }
 
 h1 {
